<resources>
    <string name="app_name">SmoothLaunchAndLogin</string>
    <string name="action_settings">Settings</string>

    <!-- 登录 -->
    <string name="login_btn">登录</string>
    <string name="logout_btn">退出登录</string>
    <string name="logout_confirm">确定退出？</string>

    <string name="login_in">登  录</string>
    <string name="login_button_text">登录</string>
    <string name="login_ongoing">登录中&#8230;&#8230;&#8230;</string>
    <string name="login_input_hint_username">请输入用户名</string>
    <string name="login_input_hint_empname">请输入员工名，主账号登录可不填</string>
    <string name="login_input_hint_pwd">请输入密码</string>
    <string name="login_err_username">用户名不正确</string>
    <string name="login_err_pwd">密码不正确</string>
    <string name="login_err_user_pwd">用户名或密码不正确</string>
    <string name="login_err_not_exist_user">用户不存在</string>
    <string name="login_err_poor_network">网络异常，请稍后再试</string>
    <string name="login_hint_success">登录成功</string>
    <string name="login_username_format_error">请输入用户名</string>
    <string name="login_pwd_format_error">请输入密码</string>
    <string name="login_service_error">系统异常</string>
    <string name="login_request_error">请求异常</string>
    <string name="login_login_failed">用户登录失败</string>
    <string name="login_token_refresh">登录有效期失效，请重新登录</string>
    <string name="login_offline_succeed">离线登录成功</string>
    <string name="login_offline_failed">离线登录失败! 您的帐号必须在线登录过才能离线登录</string>
    <string name="login_config">上级用户配置</string>
    <string name="login_admin_name">上级D用户编号</string>
    <string name="login_admin_hint">请输入6位用户编号</string>
    <string name="login_admin_invalid_msg">D用户编号格式不正确，格式是6位数字</string>
    <string name="login_admin_not_config_msg">第一次使用收银机，登录前请先点击"上级用户配置"，输入D用户编号</string>

    <!-- 桌面 -->
    <string name="desktop_title">桌面</string>
    <string name="desktop_operator">操作员：</string>
    <string name="desktop_job">岗位：</string>
    <string name="desktop_date">日期：</string>
    <string name="desktop_item_cashier">收银</string>
    <string name="desktop_goods_mgr">商品管理</string>
    <string name="desktop_purchase">采购</string>
    <string name="desktop_report">报表</string>
    <string name="desktop_member">会员</string>
    <string name="desktop_settings">设置</string>
    <string name="desktop_return">返回首页</string>
    <string name="desktop_purchase_get_url_fail">获取采购站点信息失败</string>

</resources>
