<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">
    <TextView
        android:id="@+id/tv_admin_config"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_input_height"
        android:layout_margin="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:textSize="@dimen/login_input_text_size"
        android:text="@string/login_config"
        android:textColor="@color/solid_white"
        />
    <com.soaring.smoothlaunchandlogin.ResizeRelativeLayout
        android:id="@+id/login_root"
        android:layout_width="@dimen/login_root_width"
        android:layout_height="@dimen/login_root_height"
        android:background="@drawable/login_kuang"
        android:layout_centerInParent="true">
        
        <ImageView
            android:id="@+id/logo"
            android:src="@drawable/dgj_logo"
            android:layout_margin="@dimen/logo_margin"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height" />

        <LinearLayout
            android:id="@+id/login_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="@dimen/login_box_margin_top"
            android:orientation="vertical">
            <EditText
                android:id="@+id/setting_username"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:background="@drawable/login_box"
                android:textSize="@dimen/login_input_text_size"
                android:paddingLeft="@dimen/login_input_padding_left"
                android:hint="@string/login_input_hint_username"
                android:singleLine="true"
                android:textColor="@color/solid_white"
                android:textColorHint="#c2ebe6"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@android:color/transparent"
                />
            <EditText
                android:id="@+id/setting_empname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:background="@drawable/login_box"
                android:textSize="@dimen/login_input_text_size"
                android:paddingLeft="@dimen/login_input_padding_left"
                android:hint="@string/login_input_hint_empname"
                android:textColor="@color/solid_white"
                android:singleLine="true"
                android:textColorHint="#c2ebe6"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:background="@android:color/transparent"
                />
            <EditText
                android:id="@+id/setting_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_input_height"
                android:background="@drawable/login_box"
                android:textSize="@dimen/login_input_text_size"
                android:paddingLeft="@dimen/login_input_padding_left"
                android:hint="@string/login_input_hint_pwd"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/solid_white"
                android:textColorHint="#c2ebe6"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_error_msg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_input_height"
            android:layout_margin="@dimen/login_error_hint_margin"
            android:layout_below="@id/login_box"
            android:gravity="center"
            android:textSize="@dimen/login_input_text_size"
            android:textColor="@color/solid_white"
            />
        <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/login_progress_margin"
        android:layout_below="@id/login_box"
        android:visibility="gone"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_height"
            android:background="@drawable/btn_login_selector"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/login_btn"
            android:textColor="@color/solid_white"
            android:textSize="@dimen/login_btn_text_size"
            android:gravity="center"
            android:layout_margin="@dimen/login_btn_margin"/>

    </com.soaring.smoothlaunchandlogin.ResizeRelativeLayout>

</RelativeLayout>
